# univali_databases_2021_2

./: Cargo.toml  README.md  docker-compose-loc.yml
migrations/: 20211107194303_create_condominium_table.sql  20211114195623_create_employees_table.sql
server/: .env  .gitignore  README.md
server/migrations/: 20211107193919_create_database.sql  20211110230645_add_test_cities.sql
server/src/domain/: mod.rs
server/src/domain/cities/: mod.rs
server/src/domain/condominiums/: dto.rs  mod.rs
server/src/domain/contract/: repository.rs
server/src/domain/employees/: mod.rs
server/src/domain/value_objects/: cnpj.rs  cpf.rs  mod.rs
server/src/infra/repositories/: city.rs  condominium.rs  employee.rs  mod.rs
server/src/routes/: mod.rs  viewmodel.rs
server/src/routes/cities/: mod.rs  viewmodel.rs
server/src/routes/condominiums/: mod.rs  viewmodel.rs
server/src/routes/employees/: mod.rs  viewmodel.rs
src/: main.rs
src/domain/: mod.rs
src/domain/condominiums/: mod.rs
src/domain/condominiums/contract/: repositories.rs
src/domain/condominiums/dto/: condominium.rs
src/domain/contract/: repository.rs
src/domain/employees/: dto.rs  mod.rs
src/domain/value_objects/: cpf.rs
src/infra/repositories/: condominium.rs  employee.rs  mod.rs
src/routes/: condominium.rs  mod.rs
src/routes/condominiums/: mod.rs
src/routes/employees/: mod.rs  viewmodel.rs
src/routes/viewmodel/: condominium.rs
webapp/: README.md  package.json
webapp/src/: App.tsx
webapp/src/pages/condominiums/: edit.tsx  (+2 more)
webapp/src/services/: cities.ts  condominiums.ts  employees.ts
(+4 files in other folders)
