[package]
name = "databases_1_m3_1"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
sqlx = { version = "0.5.5", features = [ "runtime-actix-rustls", "mysql", "migrate"] }
openssl = { version = "0.10.36", features = ["vendored"] }
dotenv = "0.15.0"
log = "0.4.0"
env_logger = "0.8.4"
async-trait = "0.1.51"